--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/jwt": "^10.0.0",
     "@prisma/adapter-better-sqlite3": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "bcryptjs": "^3.0.3",
     "fastify": "^5.7.2",
+    "jsonwebtoken": "^9.0.3",
     "prisma": "^7.3.0",
     "zod": "^4.3.6"
   },
